fix: test displaying pagination nuyyons on IOS;

--- a/src/styles/templates/pagination.scss
+++ b/src/styles/templates/pagination.scss
@@ -20,6 +20,7 @@
 	background-color: inherit;
 	color: inherit;
 	margin: 0 1rem;
+	padding: 0;
 	cursor: pointer;
 	width: 3rem;
 	height: 3rem;
